[workspace]
members = ["canisters/https_spx_for_option", "logics/https_spx_for_option", "canisters/https_spx_4500_call", "logics/https_spx_4500_call", "canisters/https_spx_4500_put", "logics/https_spx_4500_put", "canisters/lens_iv_calculator", "logics/lens_iv_calculator", "canisters/relayer_spx_4500_call", "logics/relayer_spx_4500_call", "canisters/relayer_spx_4500_put", "logics/relayer_spx_4500_put", "canisters/snapshots_iv_for_spx_4500_call", "logics/snapshots_iv_for_spx_4500_call", "canisters/snapshots_iv_for_spx_4500_put", "logics/snapshots_iv_for_spx_4500_put", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.8"
ic-cdk = "0.8"
ic-cdk-macros = "0.6.10"
ic-cdk-timers = "0.1"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
hex = "0.4.3"

ic-web3-rs = { version = "0.1.2" }
ic-solidity-bindgen = { version = "0.1.8" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "04be7eb0971498ce431df5e223e9b97f417a01ac" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "04be7eb0971498ce431df5e223e9b97f417a01ac" }
