[workspace]
members = ["canisters/https_spx_for_option", "logics/https_spx_for_option", "canisters/https_spx_4500_call", "logics/https_spx_4500_call", "canisters/https_spx_4500_put", "logics/https_spx_4500_put", "canisters/lens_iv_calculator", "logics/lens_iv_calculator", "canisters/relayer_spx_4500_call", "logics/relayer_spx_4500_call", "canisters/relayer_spx_4500_put", "logics/relayer_spx_4500_put", "canisters/snapshots_iv_for_spx_4500_call", "logics/snapshots_iv_for_spx_4500_call", "canisters/snapshots_iv_for_spx_4500_put", "logics/snapshots_iv_for_spx_4500_put", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
hex = "0.4.3"

ic-web3-rs = { git = "https://github.com/horizonx-tech/ic-web3-rs.git", tag = "v0.1.3" }
ic-solidity-bindgen = { git = "https://github.com/horizonx-tech/ic-solidity-bindgen.git", tag = "v0.1.9" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "57448f35e39288a3262a4f649f8f13ba0df46068" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "57448f35e39288a3262a4f649f8f13ba0df46068" }
