[workspace]
members = ["canisters/voting_event_indexer_sepolia", "logics/voting_event_indexer_sepolia", "canisters/voting_event_indexer_scroll_sepolia", "logics/voting_event_indexer_scroll_sepolia", "canisters/proposal_factory_event_indexer_scroll_sepolia", "logics/proposal_factory_event_indexer_scroll_sepolia", "canisters/proposal_factory_event_indexer_sepolia", "logics/proposal_factory_event_indexer_sepolia", "canisters/proposal_lens", "logics/proposal_lens", "canisters/proposal_relayer_scroll_sepolia", "logics/proposal_relayer_scroll_sepolia", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
hex = "0.4.3"

ic-web3-rs = "0.1.3"
ic-solidity-bindgen = "0.1.9"
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev= "3a2d85d6cab5674a68a03ac180c50984ab4b836d" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev= "3a2d85d6cab5674a68a03ac180c50984ab4b836d" }
