[workspace]
members = ["bindings/*", "canisters/*", "logics/*"]

[workspace.dependencies]
candid = "0.8"
ic-cdk = "0.8"
ic-cdk-macros = "0.6.10"
ic-cdk-timers = "0.1"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
hex = "0.4.3"

serde_json = "1.0.104"
ic-web3-rs = { version = "0.1.1" }
ic-solidity-bindgen = { version = "0.1.5" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "7fdf04d636c11ab7796fefc40d0e9ee92a3183fa" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "7fdf04d636c11ab7796fefc40d0e9ee92a3183fa" }
