[workspace]
members = ["canisters/sp500_indexer_https", "logics/sp500_indexer_https", "canisters/sp500_uint256_lens", "logics/sp500_uint256_lens", "canisters/sp500_relayer_sepolia", "logics/sp500_relayer_sepolia", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.8"
ic-cdk = "0.8"
ic-cdk-macros = "0.6.10"
ic-cdk-timers = "0.1"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
hex = "0.4.3"

ic-web3-rs = { version = "0.1.2" }
ic-solidity-bindgen = { version = "0.1.8" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "9c41c78133059052b77e9d177ed1a22c6a5d863f" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "9c41c78133059052b77e9d177ed1a22c6a5d863f" }
