[workspace]
members = ["canisters/eth_usdc_price", "logics/eth_usdc_price", "canisters/dai_eth_0_3_pool_fees", "logics/dai_eth_0_3_pool_fees", "canisters/dai_eth_0_3_tcumul_28x6hr", "logics/dai_eth_0_3_tcumul_28x6hr", "canisters/dai_eth_0_3_v3pool", "logics/dai_eth_0_3_v3pool", "canisters/shared_algorithm_lens", "logics/shared_algorithm_lens", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
hex = "0.4.3"

ic-web3-rs = "0.1.3"
ic-solidity-bindgen = "0.1.9"
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "6e55b5e8a38d1d853f4217614555f7ec7eaeb92b" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "6e55b5e8a38d1d853f4217614555f7ec7eaeb92b" }
