[workspace]
members = ["canisters/realized_volatility_from_u256", "logics/realized_volatility_from_u256", "canisters/rvol_snapshots_arbusd", "logics/rvol_snapshots_arbusd", "canisters/rvol_snapshots_avaxusd", "logics/rvol_snapshots_avaxusd", "canisters/rvol_snapshots_btcusd", "logics/rvol_snapshots_btcusd", "canisters/rvol_snapshots_dotusd", "logics/rvol_snapshots_dotusd", "canisters/rvol_snapshots_ethusd", "logics/rvol_snapshots_ethusd", "canisters/rvol_snapshots_icpusd", "logics/rvol_snapshots_icpusd", "canisters/rvol_snapshots_maticusd", "logics/rvol_snapshots_maticusd", "canisters/rvol_snapshots_opusd", "logics/rvol_snapshots_opusd", "canisters/rvol_snapshots_solusd", "logics/rvol_snapshots_solusd", "canisters/rvol_snapshots_suiusd", "logics/rvol_snapshots_suiusd", "canisters/realized_volatility_for_chainsight20", "logics/realized_volatility_for_chainsight20", "canisters/rvol_snapshots_chainsight20", "logics/rvol_snapshots_chainsight20", "bindings/*", "accessors/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.9.6"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
hex = "0.4.3"

ic-web3-rs = "0.1.4"
ic-solidity-bindgen = "0.1.12"
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev= "a006f4fbfc384a407c0fccdc2c97edd0f060c051" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev= "a006f4fbfc384a407c0fccdc2c97edd0f060c051" }
