[package]
name = "sp500_uint256_lens"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_bytes.workspace = true
hex.workspace = true

ic-web3-rs.workspace = true
ic-solidity-bindgen.workspace = true
chainsight-cdk-macros.workspace = true
chainsight-cdk.workspace = true

sp500_uint256_lens_bindings = { path = "../../bindings/sp500_uint256_lens_bindings" }
sp500_uint256_lens_accessors = { path = "../../accessors/sp500_uint256_lens_accessors" }
