[package]
name = "vra_eth_0_3_algorithm_lens"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-macros.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
hex.workspace = true

ic-web3-rs.workspace = true
ic-solidity-bindgen.workspace = true
chainsight-cdk-macros.workspace = true
chainsight-cdk.workspace = true

vra_eth_0_3_algorithm_lens_bindings = { path = "../../bindings/vra_eth_0_3_algorithm_lens_bindings" }
vra_eth_0_3_algorithm_lens_accessors = { path = "../../accessors/vra_eth_0_3_algorithm_lens_accessors" }
